[package]
name = "microkv"
version = "0.1.0"
authors = ["ex0dus-0x <ex0dus at codemuch.tech>"]

[[bin]]
name = "microkv"
path = "cli/src/main.rs"

[dependencies]

bincode = "1.2.1"
sodiumoxide = "0.2.5"

indexmap = { version = "1.3.2", features = ["serde-1"] }
serde = { version = "1.0", features = ["rc", "derive"] }
secstr = { version = "0.4.0", features = ["serde"] }
