[package]
name = "microkv"
description = "a minimal and persistent key-value store designed with security in mind."
version = "0.2.0"

authors = ["ex0dus-0x <ex0dus at codemuch.tech>"]
license = "MIT"

homepage = "https://github.com/ex0dus-0x/microkv"
documentation = "https://docs.rs/microkv"
repository = "https://github.com/ex0dus-0x/microkv"
readme = "README.md"

edition = "2018"

[dependencies]

bincode = "1.2.1"
sodiumoxide = "0.2.5"

indexmap = { version = "1.3.2", features = ["serde-1"] }
serde = { version = "1.0", features = ["rc", "derive"] }
secstr = { version = "0.4.0", features = ["serde"] }
