[package]
name = "microkv"
description = "secure minimal key-value store"
version = "0.3.0"

authors = ["ex0dus-0x"]
license = "MIT"

homepage = "https://github.com/ex0dus-0x/microkv"
documentation = "https://docs.rs/microkv"
repository = "https://github.com/ex0dus-0x/microkv"
readme = "README.md"

edition = "2021"

[dependencies]
indexmap = { version = "2.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chacha20poly1305 = "0.10"
rmp-serde = "=1.1.2"
memsec = "0.7.0"
scrypt = { version = "0.11", default-features = false }
getrandom = "0.2"
zeroize = "1"
thiserror = "1"

[dependencies.argon2]
version = "0.5"
default-features = false
features = ["alloc"]
optional = true

# argon2 pulls base64ct transitively; pin to the last release that builds on
# pre-edition2024 toolchains. Only compiled when the `argon2` feature is enabled.
[dependencies.base64ct]
version = "=1.6.0"
optional = true

[features]
default = []
argon2 = ["dep:argon2", "dep:base64ct"]
# Require memory-locked key storage: fail to open rather than fall back to a zeroizing
# heap allocation when the OS denies secure (mlock'd) allocation.
strict-mlock = []
